Fix header alignment with media query, hero image responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,15 @@ header .hero p {
 header .hero img {
   display: block;
   margin:3em auto 0;
-  width: 100%;
-  height: auto;
 }
+
+@media only screen and (max-width: 761px){
+  header .hero img {
+    height: auto;
+    width: 100%;
+  }
+}
+
 /*@media only screen and (max-width: 500px){
     header .hero img{
     width: 100;
@@ -373,16 +379,19 @@ footer .logo{
     background-color: #fafafa;
     /*background-image: linear-gradient(to left, #3498DB 0%, #3498DB 33.33337%, #34495E 33.33337%, #34495E 100%);*/
     height: 100px;
-}
-footer p, footer nav ul{
-  padding: 2em 0;
-  text-align: left;
-}
-footer .right-footer-block {
-  background-color: #fafafa;
-}
-footer .logo{
-  padding: 2em 0 2em 1.5em;
+  }
+
+  footer p, footer nav ul{
+    padding: 2em 0;
+    text-align: left;
+  }
+  footer .right-footer-block {
+    background-color: #fafafa;
+  }
+  footer .logo{
+    padding: 2em 0 2em 1.5em;
+  }
+
 }
 /*@media only screen and (max-width: 600px){
     footer .logo{
@@ -661,5 +670,19 @@ footer .logo{
     width: 260px;
     height:180px;
     float: right;
+
+}
+
+@media only screen and (max-width: 992px) {
+  .site-logo img {
+    display: block;
+    margin: auto;
+  }
+
+  header nav ul {
+    display: block;
+    float: none;
+    text-align: center;
+  }
 
 }
